Added "search" for now just list album's photos
