# photos-api/generated/src/apis/default_api.rs
@@ -50,6 +50,13 @@ pub enum ListSharedAlbumsError {
     UnknownValue(serde_json::Value),
 }
 
+/// struct for typed errors of method [`search_media_items`]
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(untagged)]
+pub enum SearchMediaItemsError {
+    UnknownValue(serde_json::Value),
+}
+
 
 pub async fn download_media_item(configuration: &configuration::Configuration, media_item_id: &str) -> Result<std::path::PathBuf, Error<DownloadMediaItemError>> {
     let local_var_configuration = configuration;
@@ -214,6 +221,37 @@ pub async fn list_shared_albums(configuration: &configuration::Configuration, pa
         serde_json::from_str(&local_var_content).map_err(Error::from)
     } else {
         let local_var_entity: Option<ListSharedAlbumsError> = serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        Err(Error::ResponseError(local_var_error))
+    }
+}
+
+pub async fn search_media_items(configuration: &configuration::Configuration, search_media_items_request: Option<models::SearchMediaItemsRequest>) -> Result<models::ListMediaItemsResponse, Error<SearchMediaItemsError>> {
+    let local_var_configuration = configuration;
+
+    let local_var_client = &local_var_configuration.client;
+
+    let local_var_uri_str = format!("{}/mediaItems:search", local_var_configuration.base_path);
+    let mut local_var_req_builder = local_var_client.request(reqwest::Method::POST, local_var_uri_str.as_str());
+
+    if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
+        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+    }
+    if let Some(ref local_var_token) = local_var_configuration.oauth_access_token {
+        local_var_req_builder = local_var_req_builder.bearer_auth(local_var_token.to_owned());
+    };
+    local_var_req_builder = local_var_req_builder.json(&search_media_items_request);
+
+    let local_var_req = local_var_req_builder.build()?;
+    let local_var_resp = local_var_client.execute(local_var_req).await?;
+
+    let local_var_status = local_var_resp.status();
+    let local_var_content = local_var_resp.text().await?;
+
+    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
+        serde_json::from_str(&local_var_content).map_err(Error::from)
+    } else {
+        let local_var_entity: Option<SearchMediaItemsError> = serde_json::from_str(&local_var_content).ok();
         let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
         Err(Error::ResponseError(local_var_error))
     }
